          methods returning beans with multiple variants available.
        - Added new Server(Protocol) constructor.
        - Renamed Application#findRole(String) into getRole(String).
        - Renamed Component#findRealm(String) into getRealm(String).
        - Renamed Extractor#extract*() into extractFrom*().
        - Component#main() now expects a full URI reference instead of
          a local file path for more flexibility (CLAP and HTTP URIs). 
     - Enhancements
        - Added a new Jackson extension, with transparent conversion
          between JSON representations and objects.
          Suggested by Tal Liron.    
        - Adjusted scoring in DefaultConverter for Form objects and
          in XstreamConverter for objects with unspecified target
          media type.      
        - ServerResource now rejects unconvertible parameters with
          a 415 status.
        - ServerResource now supports empty POST and PUT requests.
        - Added converter of FreeMarker Template objects in the 
          FreeMarker extension.
        - Added converter of Velocity Template objects in the 
          Velocity extension.
        - Added converter of Graph objects in the RDF extension.
        - Added converter of Syndfeed objects in the ROME extension.
        - Added converter for the JiBX extension.
        - Added converter for Message objects to representations in the
          JavaMail extension.
        - Added converter for WebRowSet, JdbcResult, ResultSet objects
          to representations in the JDBC extension.
        - Added support of the Data Services extension in Android.
        - Added Restlet object serialization for the GWT edition, 
          leveraging GWT's deferred binding mechanism and GWT-RPC
          serialization format.
        - Added a context's attribute to requests coming from the 
          Servlet extension: "org.restlet.ext.servlet.offsetPath". 
          Proposed by Carsten Lohmann.