@@ -66,6 +66,7 @@ Import-Package: com.db4o,
  org.restlet.ext.jibx,
  org.restlet.ext.json,
  org.restlet.ext.rdf,
+ org.restlet.ext.spring,
  org.restlet.ext.velocity,
  org.restlet.ext.wadl,
  org.restlet.ext.xml,
@@ -76,7 +77,9 @@ Import-Package: com.db4o,
  org.restlet.service,
  org.restlet.util,
  org.springframework.beans.factory,
+ org.springframework.beans.factory.xml,
  org.springframework.context,
  org.springframework.context.support,
+ org.springframework.core.io,
  org.springmodules.db4o
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
