@@ -1,4 +1,4 @@
-<module id="jetty" includes="jee,jse" type="connector" package="org.restlet.ext.jetty">
+<module id="jetty" includes="jse" type="connector" package="org.restlet.ext.jetty">
    <name>Restlet Extension - Jetty</name>
    <description>
       Integration with Jetty.
